remove translation from resume to fix blurry text on Chrome

--- a/public/main.css
+++ b/public/main.css
@@ -213,9 +213,6 @@ article#index footer nav ul li > *:active {
   -ms-filter: none;
   -webkit-filter: none;
           filter: none;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
   -webkit-transition: opacity 0.2s ease-out;
   transition: opacity 0.2s ease-out;
   z-index: 2;
