--- a/styles/resume.styl
+++ b/styles/resume.styl
@@ -1,7 +1,6 @@
 #toggle-resume:checked + #overlay-resume
   fixed top 0 right 0 bottom 0 left 0
   opacity 1
-  transform translateZ(0)
   transition opacity 0.2s ease-out
   z-index 2
 
